syntax = "proto3";

import "google/protobuf/timestamp.proto";

message TypeAlbum {
    string id = 1;
    string title = 2;
    string author_id = 3;
    google.protobuf.Timestamp created_at = 4;
    string avatar_url = 5;
    repeated string track_ids = 6;
}
