syntax = "proto3";

package service.iam;

service IAMGrpcService {
  rpc SignIn(SignInRequest)					returns (SignInResponse);
  rpc SignUp(SignUpRequest)					returns (SignUpResponse);
  rpc SignOut(SignOutRequest)				returns (SignOutResponse);
  rpc ValidateToken(ValidateTokenRequest)	returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest)		returns (RefreshTokenResponse);
  rpc UpdateUserData(UpdateUserDataRequest)  returns (UpdateUserDataResponse);
  rpc DeleteUser(DeleteUserRequest)          returns (DeleteUserResponse);
}

message SignInRequest {
  string username = 1;
  string password = 2;
}
message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}
message SignUpResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}
message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
}

message SignOutRequest {
  string refresh_token = 1;
}
message SignOutResponse {
  bool success = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  bool success = 1;
  string error_message = 2;
  string access_token = 3;
  string refresh_token = 4;
  string user_id = 5;
}

message UpdateUserDataRequest {
  string user_id = 1;
  string username = 2;
  optional string email = 3;
}

message UpdateUserDataResponse {
  bool success = 1;
  string error_message = 2;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string error_message = 2;
}